--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,13 +26,14 @@ targets = ["thumbv7em-none-eabihf"]
 cfg-if = "1.0"
 cortex-m = "0.6"
 cortex-m-rt = "0.6"
+doc-comment = "0.3"
 embedded-dma = "0.1"
 embedded-hal = "0.2"
 nb = "0.1"
 paste = "1"
 rtcc = "0.2"
 stm32f3 = "0.12"
-doc-comment = "0.3.3"
+typenum = "1.12"
 
 [dependencies.embedded-hal-can]
 version = "0.1.0"
